# Modern-CMake-zh_CN

./: .bookignore  .bumpversion.cfg  .cmake-format.yaml  .gitbook.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_GitBook.html  README_GitBook.md  SUMMARY.md  book.json  index.html  introduction.md  search_index.json
.github/workflows/: pages.yml
chapters/: basics.html  basics.md  features.html  features.md  install.html  install.md  packages.html  packages.md  projects.en.md  projects.html  projects.md  testing.html  testing.md
chapters/basics/: comms.html  comms.md  example.html  example.md  functions.html  functions.md  programs.html  programs.md  structure.html  structure.md  variables.html  variables.md
chapters/features/: cpp11.html  cpp11.md  debug.html  debug.md  ides.html  ides.md  modules.html  modules.md  small.html  small.md  utilities.html  utilities.md
chapters/install/: exporting.html  exporting.md  installing.html  installing.md  packaging.html  packaging.md
chapters/intro/: dodonot.html  dodonot.md  installing.html  installing.md  newcmake.html  newcmake.md  running.html  running.md  安装 CMake.md
chapters/projects/: download.html  download.md  fetch.html  fetch.md  submodule.html  submodule.md
chapters/testing/: catch.html  catch.md  googletest.html  googletest.md
examples/: .gitignore  CMakeLists.txt
examples/extended-project/: CMakeLists.txt  README.md
examples/extended-project/apps/: app.cpp
examples/extended-project/docs/: mainpage.md
examples/extended-project/include/modern/: lib.hpp
examples/extended-project/src/: CMakeLists.txt  lib.cpp
examples/extended-project/tests/: CMakeLists.txt
examples/fetch/: main.cpp
examples/root-dict/: DictExample.h  README.md  index.html
examples/root-simple/: README.md  SimpleExample.cxx  index.html
examples/root-usefile/: README.md  index.html
examples/simple-project/: CMakeLists.txt  simple_example.cpp
gitbook/gitbook-plugin-statistics/: statistics.js
gitbook/gitbook-plugin-term/: initclip.js  plugin.css
origin/: SUMMARY.md
origin/chapters/: basics.md  install.md  packages.md
origin/chapters/basics/: comms.md  structure.md  variables.md
origin/chapters/features/: cpp11.md  debug.md  ides.md  modules.md  small.md  utilities.md
origin/chapters/install/: installing.md
origin/chapters/intro/: dodonot.md  installing.md  newcmake.md  running.md
origin/chapters/projects/: download.md  fetch.md  submodule.md
origin/chapters/testing/: catch.md  googletest.md
origin/examples/extended-project/apps/: CMakeLists.txt
origin/examples/extended-project/docs/: CMakeLists.txt
origin/examples/extended-project/tests/: testlib.cpp
origin/examples/fetch/: CMakeLists.txt
origin/examples/root-dict/: CMakeLists.txt  CheckLoad.C  DictExample.cxx  DictLinkDef.h
origin/examples/root-simple/: CMakeLists.txt
origin/examples/root-usefile/: CMakeLists.txt  README.md
origin/examples/simple-project/: simple_lib.cpp  simple_lib.hpp
